--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
     <meta property="og:title" content="Ranking Calculator">
-    <meta property="og:description" content="A lightweight ranking calculator for classic wow.">
+    <meta property="og:description" content="A lightweight ranking calculator for classic wow. (Season of Mastery)">
     <meta property="og:site_name" content="Ranker">
     <meta
       name="description"
